<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/deskripsi_logo_launcher"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                style="@style/text.information"
                android:text="@string/email"
                android:layout_marginEnd="10dp"/>

            <com.example.storyapp.ui.EmailEditText
                android:id="@+id/edt_email"/>
        </TableRow>
        <TableRow>
            <TextView
                style="@style/text.information"
                android:text="@string/password"
                android:layout_marginEnd="10dp"/>
            <com.example.storyapp.ui.PasswordEditText
                android:id="@+id/edt_password" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>