<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_name"
        style="@style/text.title"
        android:layout_marginTop="180dp"/>

    <TextView
        android:id="@+id/tv_email"
        style="@style/text.information"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        android:text="@string/konfirmasi"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tidak" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="40dp"
                android:text="@string/iya"/>

        </TableRow>

    </TableLayout>

</LinearLayout>